--- a/index.html
+++ b/index.html
@@ -104,46 +104,48 @@
         </div>
         
         <hr>
-        <ul class="site-footer-link">
-            <li>
-                <a href="#">Bosh sahifa</a>
-            </li>
-            <li>
-                <a href="#">Choyshablar</a>
-            </li>
-            <li>
-                <a href="#">Aksiyalar</a>
-            </li>
-            <li>
-                <a href="#">Yangiliklar</a>
-            </li>
-            <li>
-                <a href="#">Kontaktlar</a>
-            </li>
-            <li>
-                <a href="#">Bolalar uchun</a>
-            </li>
-        </ul>
-        <ul class="site-footer-link">
-            <li>
-                <a href="#">Ko'p so'raladigan savollar</a>
-            </li>
-            <li>
-                <a href="#">Yetkazib berish haqida</a>
-            </li>
-            <li>
-                <a href="#">To'lov usullari haqida</a>
-            </li>
-            <li>
-                <a href="#">Bo'sh ish o'rinlari</a>
-            </li>
-            <li>
-                <a href="#">Biz bilan bog'lanish</a>
-            </li>
-            <li>
-                <a href="#">Maxfiylik nizomi</a>
-            </li>
-        </ul>
+        <div class="site-footer-bottom">
+            <ul class="site-footer-link">
+                <li>
+                    <a href="#">Bosh sahifa</a>
+                </li>
+                <li>
+                    <a href="#">Choyshablar</a>
+                </li>
+                <li>
+                    <a href="#">Aksiyalar</a>
+                </li>
+                <li>
+                    <a href="#">Yangiliklar</a>
+                </li>
+                <li>
+                    <a href="#">Kontaktlar</a>
+                </li>
+                <li>
+                    <a href="#">Bolalar uchun</a>
+                </li>
+            </ul>
+            <ul class="site-footer-link">
+                <li>
+                    <a href="#">Ko'p so'raladigan savollar</a>
+                </li>
+                <li>
+                    <a href="#">Yetkazib berish haqida</a>
+                </li>
+                <li>
+                    <a href="#">To'lov usullari haqida</a>
+                </li>
+                <li>
+                    <a href="#">Bo'sh ish o'rinlari</a>
+                </li>
+                <li>
+                    <a href="#">Biz bilan bog'lanish</a>
+                </li>
+                <li>
+                    <a href="#">Maxfiylik nizomi</a>
+                </li>
+            </ul>
+        </div>
     </footer>
     
 </body>
