--- a/interest.html
+++ b/interest.html
@@ -30,7 +30,7 @@
         </header>
     </header>
 
-    <div class="container">
+    <div class="container copyme">
         <h1>Random Graident Color</h1>
         <small>click me</small>
     </div>
@@ -40,6 +40,7 @@
     <small class="copyright">
         by
         <a href="https://al-ahsan-textile.netlify.app/">Zakiyyulloh Ma'murov</a>
+        <p class="bold">AAT &copy; 2018. All Rights Reserved</p>
     </small>
 
     <script src="js/interest.js"></script>
