--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in Al-Ahsan-Textile</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -32,8 +32,10 @@
         <section class="container">
             <form id="signup-form">
                 <input type="text" id="username" placeholder="Username...">
-                <button type="submit">Submit</button>
+                <button class="submit-btn" type="submit">Submit</button>
             </form>
+
+            <div></div>
         </section>
     </main>
 
