--- a/html/index.html
+++ b/html/index.html
@@ -19,10 +19,10 @@
                 <section class="site-header-right">
                     <nav class="site-header-nav">
                         <ul>
-                            <li class="head-page"><a href="#">Bosh sahifa</a></li>
-                            <li><a href="#">Choyshablar</a></li>
-                            <li><a href="#">Aksiyalar</a></li>
-                            <li><a href="#">Kontaktlar</a></li>
+                            <li class="head-page"><a href="index.html">Bosh sahifa</a></li>
+                            <li><a href="produccts.html">Choyshablar</a></li>
+                            <li><a href="action.html">Aksiyalar</a></li>
+                            <li><a href="contacts.html">Kontaktlar</a></li>
                             <li><a href="interest.html">Qiziqarli sahifa</a></li>
                         </ul>
                     </nav>
