--- a/action.html
+++ b/action.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontaktlar</title>
+    <title>Aksiyalar</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -30,3 +30,6 @@
             </div>
         </div>
     </header>
+
+</body>
+</html>
