In sah Allah complete project

--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontaktlar</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contacts.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -25,11 +25,41 @@
                         </ul>
                     </nav>
                     
-                    <a class="follow-link" href="#">Ro'yxatdan o'tish</a>
+                    <a class="follow-link" href="login.html">Ro'yxatdan o'tish</a>
                 </section>
             </div>
         </div>
     </header>
+
+    <main>
+        <h1>Kontaktlar</h1>
+
+        <section class="container">
+            <div class="form-wrapper">
+                <form class="signup-form">
+                    <input type="text" class="username" placeholder="Username...">
+                </form>
+                
+                <form class="signup-form">
+                    <input type="text" class="username" placeholder="First name...">
+                    <button class="submit-btn" type="submit">Submit</button>
+                </form>
+                <div></div>
+                <div id="output"></div>
+            </div>
+        </section>
+
+        <!-- logo cha -->
+
+        <small class="copyright">
+            by
+            <a href="https://al-ahsan-textile.netlify.app/">Zakiyyulloh Ma'murov</a>
+            <p class="bold">AAT &copy; 2018. All Rights Reserved</p>
+        </small>
+
+    </main>
+
+    <script src="js/contacts.js"></script>
 
 </body>
 </html>
