--- a/interest.html
+++ b/interest.html
@@ -25,7 +25,7 @@
                         </ul>
                     </nav>
                     
-                    <a class="follow-link" href="#">Ro'yxatdan o'tish</a>
+                    <a class="follow-link" href="login.html">Ro'yxatdan o'tish</a>
                 </section>
             </div>
         </div>
