--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in Al-Ahsan-Textile</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/interest.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -32,17 +32,14 @@
     <main>
         <section class="container">
             <form id="signup-form">
-                <input type="text" id="username" placeholder="Username...">
+                <p>Iltimos e-mailingizni kiriting</p>
+                <input type="text" id="username" placeholder="e-mail">
                 <button class="submit-btn" type="submit">Submit</button>
             </form>
 
             <div></div>
         </section>
     </main>
-
-    <footer>
-
-    </footer>
 
     <script src="js/login.js"></script>
 
