--- a/produccts.html
+++ b/produccts.html
@@ -25,7 +25,7 @@
                         </ul>
                     </nav>
                     
-                    <a class="header-follow-link" href="#">Ro'yxatdan o'tish</a>
+                    <a class="header-follow-link" href="action.html">Ro'yxatdan o'tish</a>
                 </section>
             </div>
         </div>
