--- a/action.html
+++ b/action.html
@@ -118,7 +118,7 @@
                         </ul>
                     </nav>
                     
-                    <a class="header-follow-link" href="#">Ro'yxatdan o'tish</a>
+                    <a class="header-follow-link" href="login.html">Ro'yxatdan o'tish</a>
                 </section>
             </div>
             <hr class="orange-line">
