--- a/produccts.html
+++ b/produccts.html
@@ -33,7 +33,13 @@
 
     <main class="site-main container">
 
-        <h2>Mahsulotlar</h2>
+        <section class="search">
+            <h2>Mahsulotlar</h2>
+            <div class="search-wrapper">
+                <input type="search" placeholder="Qidiruv...">
+                <button type="search-button">Qidiruv</button>
+            </div>
+        </section>
 
         <div class="promo">
             
