--- a/action.html
+++ b/action.html
@@ -33,29 +33,35 @@
 
     <main class="site-main container">
 
-        <h2>Aksiyalar</h2>
+        <section class="search">
+            <h2>Aksiyalar</h2>
+            <div class="search-wrapper">
+                <input type="search" placeholder="Qidiruv...">
+                <button type="search-button">Qidiruv</button>
+            </div>
+        </section>
 
         <div class="promo">
             
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
@@ -66,22 +72,22 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
                     <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
                 </div>
 
