--- a/produccts.html
+++ b/produccts.html
@@ -46,23 +46,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
 
@@ -72,23 +72,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="https://images.uzum.uz/cgr7gqng49devoadk42g/t_product_540_high.jpg#1685856599435" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
             </section>
