--- a/action.html
+++ b/action.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aksiyalar</title>
-    <link rel="stylesheet" href="css/action.css">
+    <title>Mahsulotlar</title>
+    <link rel="stylesheet" href="css/produccts.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                         </ul>
                     </nav>
                     
-                    <a class="header-follow-link" href="login.html">Ro'yxatdan o'tish</a>
+                    <a class="header-follow-link" href="action.html">Ro'yxatdan o'tish</a>
                 </section>
             </div>
         </div>
@@ -46,23 +46,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
 
@@ -72,23 +72,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="140" height="200"></a>
-                    <a href="#">Tecno Pova 4 8/128GB <br> Narxi:300 000 000 so'm. <br> Aksiya: 10 %</a>
+                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
                 </div>
 
             </section>
