Add some fnt and add some css

--- a/action.html
+++ b/action.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahsulotlar</title>
-    <link rel="stylesheet" href="css/produccts.css">
+    <title>Aksiyalar</title>
+    <link rel="stylesheet" href="css/action.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
