--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
     <main>
         <section class="container form-wrapper">
             <form id="signup-form">
-                <label for="username">Foydalanuvchi nomi:</label>
+                <label for="username">E-mail:</label>
                 <input type="text" id="username" required><br>
 
                 <div class="password">
