--- a/action.html
+++ b/action.html
@@ -46,23 +46,23 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
 
@@ -72,30 +72,30 @@
             <section class="promo-child">
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
                 <div class="products">
-                    <a href="#"><img src="img/Tecno Pova 4.jpg" alt="telefon" width="170" height="220"></a>
-                    <a href="#"><strong>Tecno Pova 4 8/128GB Narxi:300 000 000 so'm</strong></a>
+                    <a href="#"><img src="img/choyshab.jpg" alt="telefon" width="170" height="220"></a>
+                    <a href="#"><strong>Choyshab Narxi:210 000 so'm. Matosi <i>"Havei"</i></strong></a>
                 </div>
 
             </section>
 
 
         </div>
-
+        
         <section class="follow-link">
 
             <div class="divcha">
