add weather folder

--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
         
         <!-- logo cha -->
         <section class="small-wrapper">
-            <small class="copyright">
+            <small class="phone-number">
                 <p>Erkaklar uchun Tel: <a href="#">+998-(90)-627-10-15</a></p>
                 <p>Ayollar uchun Tel: <a href="#">+998-(90)-305-14-12</a></p>
             </small>
