--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <li><a href="index.html">Bosh sahifa</a></li>
                         <li><a href="produccts.html">Choyshablar</a></li>
                         <li><a href="action.html">Aksiyalar</a></li>
-                        <li><a href="#">Yangiliklar</a></li>
+                        <li><a href="weather.html">Ob-Havo</a></li>
                         <li><a href="contacts.html">Kontaktlar</a></li>
                     </ul>
                 </nav>
