--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AL_AHSAN_TEXTILE</title>
-    <link rel="Icon" href="img/hacker-mask.png">
+    <link rel="Icon" href="img/Logo.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
