--- a/contacts.html
+++ b/contacts.html
@@ -43,10 +43,10 @@
           </div>
         
         <!-- logo cha -->
-        <section class="small-wrapper">
+        <section class="small-wrapper ">
             <small class="phone-number">
-                <p>Erkaklar uchun Tel: <a href="#">+998-(90)-627-10-15</a></p>
-                <p>Ayollar uchun Tel: <a href="#">+998-(90)-305-14-12</a></p>
+                <p>Erkaklar uchun Tel: <a class="copyme" href="#">+998-(90)-627-10-15</a></p>
+                <p>Ayollar uchun Tel: <a class="copyme1" href="#">+998-(90)-305-14-12</a></p>
             </small>
             
             <small class="copyright">
