--- a/test.html
+++ b/test.html
@@ -1,65 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Email Address Section</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    .email-container {
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .email-input {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 8px;
-    }
-
-    .submit-button {
-      width: 100%;
-      padding: 8px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+  <title>Your Website Title</title>
+  <link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
-  <div class="email-container">
-    <h1>Enter Your Email Address</h1>
-    <input type="email" id="email" class="email-input" placeholder="Email Address">
-    <button onclick="submitEmail()" class="submit-button">Submit</button>
-  </div>
-
-  <script>
-    function submitEmail() {
-      var emailInput = document.getElementById("email");
-      var emailAddress = emailInput.value.trim();
-
-      // Validate the email address
-      if (validateEmail(emailAddress)) {
-        // Email address is valid
-        alert("Email address submitted: " + emailAddress);
-        // Perform additional actions, such as sending the email address to the server
-      } else {
-        // Invalid email address
-        alert("Invalid email address.");
-      }
-    }
-
-    function validateEmail(email) {
-      // A basic email address validation using regular expression
-      var regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-      return regex.test(email);
-    }
-  </script>
+  <h2>dcdcs</h2>
+  <h2>dcdcs</h2>
+  <h2>dcdcs</h2>
+  <h2>dcdcs</h2>
 </body>
 </html>
