--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
             
             <small class="copyright">
                 by
-                <a href="https://al-ahsan-textile.netlify.app/">Zakiyyulloh Ma'murov</a>
+                <a href="https://uz-gold-films.netlify.app/">Zakiyyulloh Ma'murov</a>
                 <p class="bold">AAT &copy; 2018. All Rights Reserved</p>
             </small>
         </section>
